--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       }
 
       li {
-        color: white;
+        color: #7c7c7c;
         font-size: 16px;
         font-weight: 100;
         height: 19px;
