--- a/cc.html
+++ b/cc.html
@@ -125,7 +125,12 @@
                   href="file:///Users/fatemeh/Documents/shecodes/github/finall/cc.html"
                   class="celsius"
                   >°C</a
-                >|°F
+                >|<a
+                  href="file:///Users/fatemeh/Documents/shecodes/github/finall/ff.html"
+                  class="farenheit"
+                  id="farenheit"
+                  >°F</a
+                >
               </div>
             </div>
           </div>
